--- a/source/sass/blocks/card__content.scss
+++ b/source/sass/blocks/card__content.scss
@@ -1,9 +1,9 @@
 .card__content {
+  margin: 0 auto;
   font-family: $font-stack;
   font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
+  font-weight: 400;
+  font-size: 14px;
   line-height: 26px;
-  text-transform: uppercase;
   color: $black;
 }
