--- a/source/sass/blocks/content-head__sub.scss
+++ b/source/sass/blocks/content-head__sub.scss
@@ -1,5 +1,6 @@
 .content-head__sub {
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
