--- a/source/sass/blocks/content__intro-index.scss
+++ b/source/sass/blocks/content__intro-index.scss
@@ -1,22 +1,13 @@
 .content__intro-index {
+  position: relative;
+  min-height: 389px;
   display: flex;
   justify-content: center;
-  width: 100%;
-  background-image: url(/img/intro-background-mobile.svg);
+  background-image: url(/img/intro__index-desktop.svg);
   background-position: center;
   background-repeat: no-repeat;
 
-  @media (min-width: $tablet-width) {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    background-repeat: no-repeat;
-  }
+  @media (min-width: $tablet-width) {}
 
-  @media (min-width: $desktop-width) {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    background-repeat: no-repeat;
-  }
+  @media (min-width: $desktop-width) {}
 }
