--- a/source/sass/blocks/content__title-head.scss
+++ b/source/sass/blocks/content__title-head.scss
@@ -1,5 +1,6 @@
 .content__title-head {
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
