--- a/source/sass/blocks/review__textarea.scss
+++ b/source/sass/blocks/review__textarea.scss
@@ -1,5 +1,6 @@
 .review__textarea {
-  font-family: 'PT Sans';
+  width: 100%;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
