--- a/source/sass/blocks/text-list.scss
+++ b/source/sass/blocks/text-list.scss
@@ -4,7 +4,5 @@
     display: flex;
   }
 
-  @media (min-width: $desktop-width) {
-    display: flex;
-  }
+  @media (min-width: $desktop-width) {}
 }
