--- a/source/sass/blocks/text__title.scss
+++ b/source/sass/blocks/text__title.scss
@@ -1,7 +1,8 @@
 .text__title {
   margin: 0;
-  padding-top: 25.5px;
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  padding: 0;
+  padding-top: 33px;
+  font-family: $font-stack;
   font-style: normal;
   font-size: 18px;
   font-weight: 700;
@@ -10,17 +11,4 @@
   text-align: center;
   text-transform: uppercase;
   color: $black;
-
-  @media (min-width: $tablet-width) {
-    font-size: 21px;
-    padding-top: 42px;
-    padding-left: 66px;
-    width: 190px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-top: 42px;
-    padding-left: 141px;
-    width: 258px;
-  }
 }
