--- a/source/sass/blocks/video__title.scss
+++ b/source/sass/blocks/video__title.scss
@@ -1,5 +1,6 @@
 .video__title {
-  font-family: 'PT Sans';
+  margin: 0 auto;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
