--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,10 +25,9 @@
 @import "./blocks/content.scss";
 @import "./blocks/intro.scss";
 @import "./blocks/intro__img.scss";
-@import "./blocks/intro__img-index.scss";
 @import "./blocks/advantages.scss";
-@import "./blocks/advantages__title";
-@import "./blocks/advantages__head";
+@import "./blocks/advantages__title.scss";
+@import "./blocks/advantages__head.scss";
 @import "./blocks/advantages__description.scss";
 @import "./blocks/advantages__item.scss";
 @import "./blocks/advantages-item.scss";
@@ -55,7 +54,7 @@
 @import "./blocks/footer.scss";
 @import "./blocks/footer__title.scss";
 @import "./blocks/footer__academy-logo.scss";
-@import "./blocks/footer__socials.scss";
+@import "./blocks/footer__academy.scss";
 @import "./blocks/socials.scss";
 @import "./blocks/socials__item.scss";
 @import "./blocks/socials__link.scss";
@@ -64,9 +63,12 @@
 @import "./blocks/content-head.scss";
 @import "./blocks/content-head__sub.scss";
 @import "./blocks/card__image.scss";
+@import "./blocks/card__image__title.scss";
+@import "./blocks/card__content-title.scss";
 @import "./blocks/card__content.scss";
 @import "./blocks/card__likes-img.scss";
 @import "./blocks/card__total-likes.scss";
+@import "./blocks/content__video.scss";
 @import "./blocks/video__title.scss";
 @import "./blocks/video__description.scss";
 @import "./blocks/video-player.scss";
@@ -80,11 +82,14 @@
 @import "./blocks/review__textarea.scss";
 @import "./blocks/button.scss";
 @import "./blocks/review__button.scss";
+@import "./blocks/modal__error.scss";
 @import "./blocks/modal-error__title.scss";
 @import "./blocks/modal-error__description.scss";
-@import "./blocks/modal-succsess.scss";
+@import "./blocks/modal-error__button.scss";
+@import "./blocks/modal__succsess.scss";
 @import "./blocks/modal-succsess__title.scss";
 @import "./blocks/modal-succsess__description.scss";
+@import "./blocks/modal-succsess__button.scss";
 @import "./blocks/nav__list.scss";
 @import "./blocks/reset-list.scss";
 @import "./blocks/content__block-card.scss";
@@ -92,13 +97,17 @@
 @import "./blocks/content__card-list.scss";
 @import "./blocks/advantages-list__bridge.scss";
 @import "./blocks/advantages__item-list.scss";
-@import "./blocks/footer__academy.scss";
 @import "./blocks/content__user-information.scss";
 @import "./blocks/content__introduce.scss";
 @import "./blocks/content__information.scss";
 @import "./blocks/content__intro-index";
 @import "./blocks/advantages__about-city.scss";
 @import "./blocks/advantages__about-bridge.scss";
-@import "./blocks/text-list";
-@import "./blocks/text-index";
-@import "./blocks/footer__academy-img";
+@import "./blocks/text-list.scss";
+@import "./blocks/text-index.scss";
+@import "./blocks/footer__academy-img.scss";
+@import "./blocks/review__text.scss";
+@import "./blocks/information__input-img.scss";
+@import "./blocks/content__attraction.scss";
+@import "./blocks/content__rating.scss";
+@import "./blocks/content__review.scss";
