--- a/source/sass/blocks/advantages-item__sub.scss
+++ b/source/sass/blocks/advantages-item__sub.scss
@@ -1,27 +1,9 @@
 .advantages-item__sub {
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
   align-items: center;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0px;
-  padding-top: 11px;
-  padding-left: 132px;
-
-  @media (min-width:$tablet-width) {
-    margin-top: 13px;
-  }
-}
-
-.advantages-item__sub__bridge {
-  margin-top: 0px;
-  margin-left: 2px;
-
-  @media (min-width: $tablet-width) {
-    margin-top: 14px;
-  }
 }
