--- a/source/sass/blocks/advantages-item__title.scss
+++ b/source/sass/blocks/advantages-item__title.scss
@@ -1,44 +1,15 @@
 .advantages-item__title {
-  margin-top: 0;
-  margin-left: -5px;
-  margin-bottom: 0;
-  padding-top: 55px;
-  padding-left: 0px;
+  margin: 0 auto;
+  padding: 0;
+  font-family: $font-stack;
   font-size: 18px;
   line-height: 26px;
   text-align: center;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
-    font-family: $font-stack;
-    margin: 0;
-    padding-top: 40px;
-    padding-left: 38px;
     font-size: 21px;
-    width: 217px;
   }
 
-  @media (min-width: $desktop-width) {
-    padding-left: 131px;
-    padding-top: 47px;
-    width: 270px;
-  }
-}
-
-.advantages-item__title__bridge {
-  padding-top: 40px;
-  padding-left: 3px;
-
-  @media (min-width: $tablet-width) {
-    padding-top: 42px;
-    margin-left: 14px;
-    width: 188px;
-    text-align: center;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-top: 49px;
-    margin-left: -7px;
-    width: 281px;
-  }
+  @media (min-width: $desktop-width) {}
 }
