--- a/source/sass/blocks/advantages-list__title.scss
+++ b/source/sass/blocks/advantages-list__title.scss
@@ -1,4 +1,8 @@
 .advantages-list__title {
+  margin: 0;
+  padding: 0;
+  padding-top: 32px;
+  padding-left: 8px;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -7,54 +11,5 @@
 
   @media (min-width: $tablet-width) {
     font-size: 21px;
-  }
-}
-
-.advantages-list__title__house {
-  padding-top: 32px;
-  padding-left: 8px;
-  margin: 0;
-
-  @media (min-width: $tablet-width) {
-    padding-top: 21px;
-    padding-left: 95px;
-    margin: 0;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-left: 165px;
-  }
-}
-
-.advantages-list__title__burger {
-  padding-top: 30px;
-  padding-left: 12px;
-  margin: 0;
-
-  @media (min-width: $tablet-width) {
-    padding-top: 22px;
-    padding-left: 109px;
-    margin: 0;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-left: 182px;
-  }
-}
-
-.advantages-list__title__gifts {
-  padding-top: 30px;
-  padding-left: 8px;
-  margin: 0;
-
-  @media (min-width: $tablet-width) {
-    padding-top: 19px;
-    padding-left: 78px;
-    margin: 0;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-left: 149px;
-    padding-top: 21px;
   }
 }
