--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,5 +1,17 @@
-.advantages {
-  @media (min-width:$tablet-width) {
-    margin-top: 24px;
+.advantages::before {
+  position: absolute;
+  background-image: url(../img/triangle-content.svg);
+  background-repeat: no-repeat;
+  content: "";
+  width: 100%;
+  height: 37px;
+  background-position: center;
+
+  @include tablet {
+    display: none;
+  }
+
+  @include desktop {
+    display: none;
   }
 }
