--- a/source/sass/blocks/advantages__head.scss
+++ b/source/sass/blocks/advantages__head.scss
@@ -1,30 +1,18 @@
 .advantages__head {
-  margin: 0px;
-  padding-top: 32px;
-  padding-left: 22px;
+  margin: 0 auto;
   font-family: $font-stack;
   font-size: 18px;
+  font-weight: 700;
   line-height: 27px;
   align-items: center;
   text-align: center;
   text-transform: uppercase;
   color: $black;
-  width: 293px;
 
   @media (min-width:$tablet-width) {
-    margin-top: 16px;
-    margin-left: 122px;
-    font-family: $font-stack;
     font-size: 21px;
-    font-weight: 700;
     line-height: 26px;
-    letter-spacing: 0px;
-    text-align: center;
-    width: 500px;
   }
 
-  @media (min-width: $desktop-width) {
-    margin-left: 336px;
-    margin-top: 27px;
-  }
+  @media (min-width: $desktop-width) {}
 }
