--- a/source/sass/blocks/advantages__item-list.scss
+++ b/source/sass/blocks/advantages__item-list.scss
@@ -3,13 +3,10 @@
     width: 100%;
     max-height: 256px;
     display: grid;
-    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
   @media (min-width: $desktop-width) {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 33.3% 33.3% 33.3%;
     height: 330px;
   }
 }
