--- a/source/sass/blocks/advantages__item.scss
+++ b/source/sass/blocks/advantages__item.scss
@@ -1,9 +1,6 @@
 .advantages__item {
-  @media (min-width: $tablet-width) {
-    max-height: 256px;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 400px;
-  }
+  display: flex;
+  flex-direction: column;
+  padding: 40px 40px;
+  gap: 20px;
 }
