--- a/source/sass/blocks/advantages__title.scss
+++ b/source/sass/blocks/advantages__title.scss
@@ -1,14 +1,5 @@
 .advantages__title {
   position: relative;
-  padding: 0;
-  margin: 0;
+  margin-top: 38px;
   font-family: $font-stack;
-
-  @media (min-width: $tablet-width) {
-    width: 100%;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 100%;
-  }
 }
