--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -1,14 +1,6 @@
 .body {
-  display: grid;
-  background: #e7e5e5;
   margin: 0 auto;
+  max-width: 1280px;
+  background: $light-gray;
   font-family: $font-stack;
-
-  @media (min-width: $tablet-width) {
-    margin: 0 auto;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin: 0 auto;
-  }
 }
