--- a/source/sass/blocks/card__content-title.scss
+++ b/source/sass/blocks/card__content-title.scss
@@ -1,10 +1,9 @@
-.card__total-likes {
+.card__content-title {
   margin: 0 auto;
   font-family: $font-stack;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 14px;
-  line-height: 27px;
+  line-height: 23px;
   text-transform: uppercase;
-  color: $black;
 }
