--- a/source/sass/blocks/content__information.scss
+++ b/source/sass/blocks/content__information.scss
@@ -1,3 +1,8 @@
 .content__information {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
   border-width: 0;
+  padding: 0 20px;
 }
