--- a/source/sass/blocks/content__introduce.scss
+++ b/source/sass/blocks/content__introduce.scss
@@ -1,3 +1,8 @@
 .content__introduce {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  padding: 0 20px;
   border-width: 0;
 }
