--- a/source/sass/blocks/content__user-information.scss
+++ b/source/sass/blocks/content__user-information.scss
@@ -1,10 +1,6 @@
 .content__user-information {
   @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-columns: 50% 50%;
-  }
-  @media (min-width: $desktop-width) {
-    display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
   }
 }
