--- a/source/sass/blocks/footer__academy-logo.scss
+++ b/source/sass/blocks/footer__academy-logo.scss
@@ -1,12 +1,14 @@
 .footer__academy-logo {
-  padding-top: 0;
-  padding-left: 0;
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: 13px;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
-  align-items: center;
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
