--- a/source/sass/blocks/form__title.scss
+++ b/source/sass/blocks/form__title.scss
@@ -1,5 +1,7 @@
 .form__title {
-  font-family: 'PT Sans';
+  margin: 0 auto;
+  padding: 0;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
