--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,16 +1,13 @@
 .header {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   width: 100%;
   background-color: $white;
   min-height: 56px;
 
 
-  @media (min-width: $tablet-width) {
-    width: 100%;
-  }
+  @media (min-width: $tablet-width) {}
 
-  @media (min-width: $desktop-width) {
-    width: 100%;
-  }
+  @media (min-width: $desktop-width) {}
 }
