--- a/source/sass/blocks/intro__img.scss
+++ b/source/sass/blocks/intro__img.scss
@@ -1,10 +1,14 @@
 .intro__img {
-  width: 320px;
-  height: 158px;
-  background-repeat: no-repeat;
-
-  @media (min-width: $tablet-width) {
-    width: 768px;
-    height: 280px;
-  }
 }
+
+.intro__img__index {
+  padding-top: 65px;
+  padding-bottom: 85px;
+}
+
+.intro__img__index::after {
+  background-image: url(/img/intro-triangle.svg);
+}
+
+.intro__img__sedona {}
+
