--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,16 +1,9 @@
 .logo {
   position: absolute;
-  margin: 0 67px;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   width: 185px;
   height: 96px;
-
-  @media (min-width: $tablet-width) {
-    position: absolute;
-    margin: 0 291px;
-  }
-
-  @media (min-width: $desktop-width) {
-    position: absolute;
-    margin: 0 507px;
-  }
+  z-index: 10;
 }
