--- a/source/sass/blocks/modal-error__title.scss
+++ b/source/sass/blocks/modal-error__title.scss
@@ -1,5 +1,7 @@
 .modal-error__title {
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
