--- a/source/sass/blocks/modal-succsess__description.scss
+++ b/source/sass/blocks/modal-succsess__description.scss
@@ -1,5 +1,7 @@
 .modal-succsess__description {
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
