--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -5,7 +5,5 @@
   height: 100%;
   max-height: 56px;
 
-  @media (max-width: $mobile-width-only) {
-
-  }
+  @media (max-width: $mobile-width-only) {}
 }
