--- a/source/sass/blocks/review__text.scss
+++ b/source/sass/blocks/review__text.scss
@@ -1,10 +1,11 @@
-.advantages-item__description {
+.review__text {
   margin: 0 auto;
+  padding: 0;
   font-family: $font-stack;
-  font-style: normal;
+  font-size: 12px;
   font-weight: 400;
-  font-size: 14px;
   line-height: 21px;
+  letter-spacing: 0px;
   text-align: center;
-  text-transform: uppercase;
+
 }
