--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -1,10 +1,5 @@
 .socials {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
-  margin-top: 34px;
-  margin-left: 44px;
-
-  @media (min-width: $tablet-width) {
-    margin-top: 36px;
-    margin-left: -38px;
-  }
 }
