--- a/source/sass/blocks/text__description.scss
+++ b/source/sass/blocks/text__description.scss
@@ -1,7 +1,7 @@
 .text__description {
   margin: 0;
-  padding-top: 26px;
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  padding: 0;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -9,74 +9,4 @@
   text-transform: uppercase;
   text-align: center;
   color: $grey;
-
-  @media (min-width: $tablet-width) {
-    padding-top: 23px;
-    padding-left: 20px;
-    padding-right: 21px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-top: 23px;
-    padding-left: 55px;
-    padding-right: 55px;
-  }
-}
-
-.text__description__square {
-  padding-top: 17px;
-  padding-left: 38px;
-  padding-right: 38px;
-  padding-bottom: 22px;
-
-  @media (min-width: $tablet-width) {
-    padding-top: 16.5px;
-    padding-left: 29px;
-    padding-right: 29px;
-    padding-bottom: 22px;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 330px;
-    padding-right: 0;
-    padding-left: 68px;
-  }
-}
-
-.text__description__road {
-  padding-top: 17px;
-  padding-left: 53px;
-  padding-right: 55px;
-  padding-bottom: 24px;
-
-  @media (min-width: $tablet-width) {
-    width: 200px;
-    padding-right: 0;
-    padding-left: 53px;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 330px;
-    padding-right: 0;
-    padding-left: 68px;
-  }
-}
-
-.text__description__tourists {
-  padding-top: 17px;
-  padding-left: 0px;
-  padding-bottom: 24px;
-
-  @media (min-width: $tablet-width) {
-    padding-right: 0;
-    padding-left: 55px;
-    width: 202px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-right: 0;
-    padding-left: 71px;
-    width: 330px;
-  }
-
 }
