--- a/source/sass/blocks/text__sub.scss
+++ b/source/sass/blocks/text__sub.scss
@@ -1,7 +1,7 @@
 .text__sub {
   margin: 0;
-  padding-top: 26px;
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  padding: 0;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -9,37 +9,4 @@
   text-transform: uppercase;
   text-align: center;
   color: $grey;
-
-  @media (min-width: $tablet-width) {
-    padding-top: 13px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-top: 12.5px;
-    padding-left: 0;
-  }
-}
-
-.text__sub__square {
-  padding-top: 13px;
-
-  @media (min-width: $tablet-width) {}
-
-  @media (min-width: $tablet-width) {}
-}
-
-.text__sub__road {
-  padding-top: 11px;
-
-  @media (min-width: $tablet-width) {}
-
-  @media (min-width: $tablet-width) {}
-}
-
-.text__sub__tourists {
-  padding-top: 11.5px;
-
-  @media (min-width: $tablet-width) {}
-
-  @media (min-width: $tablet-width) {}
 }
