--- a/source/sass/blocks/wonder__description.scss
+++ b/source/sass/blocks/wonder__description.scss
@@ -1,9 +1,7 @@
 .wonder__description {
   margin: 0;
-  padding-top: 20px;
-  padding-left: 30px;
-  padding-right: 29px;
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  padding: 0;
+  font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -12,10 +10,5 @@
   text-align: center;
   color: $black;
 
-  @media (min-width: $tablet-width) {
-    width: 435px;
-    padding-top: 33px;
-    margin-left: 166px;
-    text-align: center;
-  }
+  @media (min-width: $tablet-width) {}
 }
