--- a/source/sass/blocks/wonder__title.scss
+++ b/source/sass/blocks/wonder__title.scss
@@ -1,15 +1,13 @@
 .wonder__title {
   margin: 0;
-  padding-top: 39px;
+  padding: 0;
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
-  align-items: center;
   text-align: center;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
-    padding-top: 59px;
     font-size: 30px;
   }
 }
