Стилизация и адаптивные сетки

--- a/source/sass/blocks/advantages-item.scss
+++ b/source/sass/blocks/advantages-item.scss
@@ -1,10 +1,7 @@
 .advantages-item {
+  max-height: 256px;
+
   @media (min-width: $tablet-width) {
     width: 33.3%;
   }
-
-  @media (min-width: $desktop-width) {
-    width: 33.3%;
-  }
 }
-
