--- a/source/sass/blocks/intro__img.scss
+++ b/source/sass/blocks/intro__img.scss
@@ -1,14 +1,14 @@
 .intro__img {
 }
 
-.intro__img__index {
+.intro__img--index {
   padding-top: 65px;
   padding-bottom: 85px;
 }
 
-.intro__img__index::after {
+.intro__img--index::after {
   background-image: url(/img/intro-triangle.svg);
 }
 
-.intro__img__sedona {}
+.intro__img--sedona {}
 
