--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,3 +1,10 @@
 .modal {
   display: none;
 }
+
+.modal__error {
+  width: 100%;
+  max-width: 400px;
+  max-height: 347px;
+  background-color: $white;
+}
