--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,17 +1,17 @@
+.advantages {
+  padding-top: 15px;
+}
+
 .advantages::before {
   position: absolute;
   background-image: url(../img/triangle-content.svg);
   background-repeat: no-repeat;
   content: "";
   width: 100%;
-  height: 37px;
+  height: 36px;
   background-position: center;
 
   @include tablet {
-    display: none;
-  }
-
-  @include desktop {
     display: none;
   }
 }
