--- a/source/sass/blocks/card__image--title.scss
+++ b/source/sass/blocks/card__image--title.scss
@@ -1,13 +1,9 @@
-.card__image__title {
+.card__image--title {
   display: block;
   width: 100%;
   max-height: 280px;
 
   @media (min-width: $tablet-width) {
-    max-height: 400px;
-  }
-
-  @media (min-width: $desktop-width) {
     max-height: 400px;
   }
 }
