--- a/source/sass/blocks/content__intro-index.scss
+++ b/source/sass/blocks/content__intro-index.scss
@@ -1,5 +1,7 @@
 .content__intro-index {
   position: relative;
+  margin: 0;
+  background-color: $light-gray;
   min-height: 389px;
   display: flex;
   justify-content: center;
