--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,9 +1,7 @@
 .site-list {
-  margin-top: 0px;
-  padding-left: 0;
-  padding-bottom: 0;
-  margin-bottom: 0;
-  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: $font-stack;
   font-size: 14px;
   font-weight: 700;
   line-height: 21px;
