--- a/source/sass/blocks/site-list__item.scss
+++ b/source/sass/blocks/site-list__item.scss
@@ -1,6 +1,15 @@
 .site-list__item {
+  text-align: center;
   padding-bottom: 25px;
   padding-top: 19px;
+}
+
+.site-list__item:nth-child(4n + 3) {
+  grid-column: 4/5;
+
+  @media (min-width: $desktop-width) {
+    margin-right: 120px;
+  }
 }
 
 .site-list__item:hover {
