--- a/source/sass/blocks/wonder.scss
+++ b/source/sass/blocks/wonder.scss
@@ -9,3 +9,56 @@
     width: 100%;
   }
 }
+
+.wonder__title {
+  margin: 0;
+  padding: 0;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 30px;
+  }
+}
+
+.wonder__description {
+  margin: 0;
+  padding: 0;
+  font-family: $font-stack;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
+  text-align: center;
+  color: $black;
+
+  @media (min-width: $tablet-width) {}
+}
+
+.wonder__button {
+  display: block;
+  width: 284px;
+  height: 58px;
+  margin: 0 auto;
+  margin-top: 31px;
+  padding: 0;
+  background: $blue;
+  font-family: $font-stack;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+  color: $white;
+  border: none;
+
+  @media (min-width: $tablet-width) {
+    width: 458px;
+  }
+}
+
