--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,13 +13,11 @@
 @import "./blocks/nav__button.scss";
 @import "./blocks/nav-menu__opened.scss";
 @import "./blocks/nav-menu__closed.scss";
-@import "./blocks/modal.scss";
 @import "./blocks/visually-hiden.scss";
 @import "./blocks/logo__img.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/site-list.scss";
 @import "./blocks/site-list__item.scss";
-@import "./blocks/site-list__item__active.scss";
 @import "./blocks/site-list__link.scss";
 @import "./blocks/site-list__link--active.scss";
 @import "./blocks/content.scss";
@@ -47,9 +45,6 @@
 @import "./blocks/text__description.scss";
 @import "./blocks/theme-modified.scss";
 @import "./blocks/wonder.scss";
-@import "./blocks/wonder__title.scss";
-@import "./blocks/wonder__description.scss";
-@import "./blocks/wonder__button.scss";
 @import "./blocks/map.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/footer__title.scss";
@@ -63,7 +58,6 @@
 @import "./blocks/content-head.scss";
 @import "./blocks/content-head__sub.scss";
 @import "./blocks/card__image.scss";
-@import "./blocks/card__image--title.scss";
 @import "./blocks/card__content-title.scss";
 @import "./blocks/card__content.scss";
 @import "./blocks/card__likes-img.scss";
@@ -82,14 +76,11 @@
 @import "./blocks/review__textarea.scss";
 @import "./blocks/button.scss";
 @import "./blocks/review__button.scss";
+@import "./blocks/modal.scss";
 @import "./blocks/modal__error.scss";
-@import "./blocks/modal-error__title.scss";
-@import "./blocks/modal-error__description.scss";
-@import "./blocks/modal-error__button.scss";
+@import "./blocks/modal-error.scss";
 @import "./blocks/modal__succsess.scss";
-@import "./blocks/modal-succsess__title.scss";
-@import "./blocks/modal-succsess__description.scss";
-@import "./blocks/modal-succsess__button.scss";
+@import "./blocks/modal-succsess";
 @import "./blocks/nav__list.scss";
 @import "./blocks/reset-list.scss";
 @import "./blocks/content__block-card.scss";
