--- a/source/sass/blocks/card__image.scss
+++ b/source/sass/blocks/card__image.scss
@@ -2,6 +2,7 @@
   display: block;
   width: 100%;
   max-height: 280px;
+  object-fit: cover;
 
   @media (min-width: $tablet-width) {
     max-height: 267px;
@@ -9,5 +10,16 @@
 
   @media (min-width: $desktop-width) {
     max-height: 267px;
+  }
+}
+
+.card__image--title {
+  display: block;
+  width: 100%;
+  max-height: 280px;
+  object-fit: cover;
+
+  @media (min-width: $tablet-width) {
+    max-height: 400px;
   }
 }
