--- a/source/sass/blocks/nav-menu__closed.scss
+++ b/source/sass/blocks/nav-menu__closed.scss
@@ -7,16 +7,14 @@
     color: currentColor;
   }
 
-  .nav__button:active::before {
-    background-color: fade($blue, 30%);
-    box-shadow:
-      0 8px 0 0 fade($blue, 30%),
-      0 16px 0 0 fade($blue, 30%);
+  .site-list__link--active {
+    color: $brown;
   }
 
   @include tablet {
     .site-list {
-      display: flex;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     }
   }
 }
