Адаптивное меню и картинки

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -6,3 +6,10 @@
   background-color: $white;
   min-height: 56px;
 }
+
+.header__toggle {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 17px;
+  cursor: pointer;
+}
