--- a/source/sass/blocks/modal-error.scss
+++ b/source/sass/blocks/modal-error.scss
@@ -43,3 +43,10 @@
   color: $white;
   border: none;
 }
+
+.modal__error {
+  width: 100%;
+  max-width: 400px;
+  max-height: 347px;
+  background-color: $white;
+}
