--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -12,6 +12,60 @@
     justify-content: space-between;
     padding: 36px 60px;
   }
-  @media (min-width:$desktop-width) {
+}
+
+.footer__title {
+  font-family: $font-stack;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  color: $black;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
   }
 }
+
+.footer__logo {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  display: flex;
+}
+
+.footer__academy {
+  width: 100px;
+  padding-top: 30px;
+  padding-left: 96px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 31px;
+    padding-right: 68px;
+  }
+}
+
+.footer__academy-logo {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: 13px;
+  font-family: $font-stack;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: $black;
+}
+
+.footer__academy-img {
+  margin: 0;
+}
+
