--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,3 +1,7 @@
+.crad {
+  position: relative;
+}
+
 .card__content--block {
   display: flex;
   flex-direction: column;
@@ -10,17 +14,15 @@
     grid-template-columns: 66.6% 33.3%;
     background-color: $light-gray;
     min-height: 80px;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0;
+    bottom: 0;
   }
 
   @media (min-width: $desktop-width) {
     position: absolute;
     width: 400px;
     color: $white;
-    background-color: $black;
-    opacity: 0.3;
-    bottom: 0;
+    background-color: rgba(0 0 0 / 30%);
   }
 }
 
@@ -30,7 +32,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    background-color: opacify($color: $black, $amount: 0);
+    background-color: rgba(0 0 0 / 30%);
   }
 }
 
