Исправлен: критерий Б2, Бэм методология. Добавлены: меню без JS, ретинизация, label на странице form. Скрыта папка build. Папки вынесены из blocks

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -176,6 +176,9 @@
 
 .advantages__city-img {
   display: block;
+  margin: 0 auto;
+  min-width: 320px;
+  max-height: 260px;
 
   @media (min-width: $tablet-width) {
     height: 256px;
