--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,13 +1,13 @@
-@import "./blocks/mixins/mixins.scss";
-@import "./blocks/fonts.scss";
-@import "./blocks/setup/setup.scss";
+@import "./mixins/mixins.scss";
+@import "./fonts/fonts.scss";
+@import "./setup/setup.scss";
+@import "./setup/visually-hiden.scss";
 @import "./blocks/theme-light.scss";
 @import "./blocks/theme-dark.scss";
 @import "./blocks/body.scss";
 @import "./blocks/container.scss";
 @import "./blocks/header.scss";
 @import "./blocks/nav.scss";
-@import "./blocks/visually-hiden.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/site-list.scss";
 @import "./blocks/content.scss";
@@ -40,3 +40,4 @@
 @import "./blocks/attraction.scss";
 @import "./blocks/rating.scss";
 @import "./blocks/text-area.scss";
+@import "./blocks/player-button.scss";
