--- a/source/sass/blocks/advantages-title.scss
+++ b/source/sass/blocks/advantages-title.scss
@@ -13,8 +13,7 @@
 }
 
 .advantages-title__head {
-  margin: 0 auto;
-  margin-right: 5px;
+  margin: 0 2px 0 auto;
   font-family: $font-stack;
   font-size: 18px;
   font-weight: 700;
