--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -12,7 +12,7 @@
 
 .advantages::before {
   position: absolute;
-  background-image: url("/img/triangle-content.svg");
+  background-image: url("../img/triangle-content.svg");
   background-repeat: no-repeat;
   content: "";
   width: 100%;
