--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -26,12 +26,13 @@
 
 .video__description {
   margin: 0 auto;
-  padding: 26px 9px;
+  padding: 28px 20px;
   font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 21px;
+  text-transform: uppercase;
   align-items: center;
   text-align: center;
   color: $black;
@@ -41,6 +42,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 30px 359px;
+    padding: 32px 368px;
   }
 }
