--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -49,5 +49,8 @@
 @import "./blocks/text-list.scss";
 @import "./blocks/attraction.scss";
 @import "./blocks/rating.scss";
+@import "./blocks/like-link.scss";
 @import "./blocks/text-area.scss";
 @import "./blocks/player-button.scss";
+@import "./blocks/footer-catalog.scss";
+@import "./blocks/content-title-form.scss";
