--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -10,7 +10,7 @@
   content: "";
   position: absolute;
   bottom: 0;
-  background-image: url("/img/intro-triangle.svg");
+  background-image: url("../img/intro-triangle.svg");
   background-repeat: no-repeat;
   width: 100%;
   height: 56px;
@@ -19,6 +19,7 @@
 
 .intro__catalog {
   min-height: 158px;
+
 
   @media (min-width: $tablet-width) {
     min-height: 290px;
@@ -37,6 +38,14 @@
   }
 }
 
+.intro__img--catalog {
+  padding-top: 12px;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
 .intro__img--index {
   padding-top: 89px;
   padding-bottom: 80px;
@@ -48,5 +57,5 @@
 }
 
 .intro__img--index::after {
-  background-image: url("/img/intro-triangle.svg");
+  background-image: url("../img/intro-triangle.svg");
 }
