--- a/source/sass/blocks/text.scss
+++ b/source/sass/blocks/text.scss
@@ -70,9 +70,7 @@
 
 .text__description--index {
   margin: 0;
-  padding: 0;
-  padding-top: 4px;
-  padding-bottom: 14.5px;
+  padding: 4px 19px 14.5px;
   font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
@@ -92,7 +90,7 @@
   padding: 3.5px 48px;
 
   @media (min-width: $tablet-width) {
-    padding: 2.5px 52px;
+    padding: 2.5px 60px;
     margin-right: 3px;
   }
 }
