--- a/source/sass/blocks/video-player.scss
+++ b/source/sass/blocks/video-player.scss
@@ -1,7 +1,7 @@
 .video-player {
   position: relative;
   margin: 0 auto;
-  padding-top: 0;
+  padding-top: 10px;
   left: 50%;
   transform: translateX(-50%);
   width: 280px;
