--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -37,7 +37,7 @@
   }
 }
 
-.advantages__list--house-svg {
+.advantages__list-house-svg {
   margin-left: 4px;
   width: 53px;
   padding-top: 13px;
@@ -56,7 +56,7 @@
   }
 }
 
-.advantages__list--burger-svg {
+.advantages__list-burger-svg {
   margin-left: 4px;
   width: 53px;
   padding-top: 9px;
@@ -75,7 +75,7 @@
   }
 }
 
-.advantages__list--gift-svg {
+.advantages__list-gift-svg {
   padding-top: 7px;
   padding-left: 21px;
   margin-left: 1px;
@@ -133,7 +133,10 @@
   max-height: 260px;
 
   @media (min-width: $tablet-width) {
-    height: 256px;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    max-height: initial;
   }
 }
 
@@ -148,7 +151,7 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
   }
 }
 
