--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -2,7 +2,7 @@
   position: relative;
 }
 
-.card__content--block {
+.card__content-block {
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -26,7 +26,7 @@
   }
 }
 
-.card__content--block-theme {
+.card__content-block-theme {
   @media (min-width: $tablet-width) {
     background-color: $catalog-bg-theme;
   }
@@ -36,7 +36,7 @@
   }
 }
 
-.card__content--block-head {
+.card__content-block-head {
   @media (min-width: $desktop-width) {
     position: absolute;
     min-width: 1200px;
@@ -54,6 +54,10 @@
     gap: 0px;
     padding-top: 21px;
     padding-right: 19px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-row: 1 / 3;
   }
 }
 
@@ -100,7 +104,7 @@
   }
 }
 
-.card__image--title {
+.card__image-title {
   display: block;
   margin: 0 auto;
   max-height: 280px;
@@ -132,6 +136,7 @@
 
   @media (min-width: $desktop-width) {
     color: $white;
+    margin-top: -13px;
   }
 }
 
