--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,10 +1,14 @@
+
+
+
+
 .footer {
   display: flex;
   flex-direction: column;
   gap: 19px;
   align-items: center;
   background: $white;
-  padding: 20.5px 0;
+  padding: 40px 0;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
@@ -15,6 +19,31 @@
 
   @media (min-width: $desktop-width) {
     padding: 23.5px 120px;
+  }
+}
+
+.footer--catalog {
+  padding-top: 20px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+    padding-top: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 100px;
+  }
+}
+
+.footer--form {
+  padding-top: 18.5px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 86.5px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 59.5px 120px;
   }
 }
 
@@ -79,3 +108,5 @@
     padding: 101.5px 120px;
   }
 }
+
+
