--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,7 +2,7 @@
   padding: 25px 20px;
 
   @media (min-width: $tablet-width) {
-    padding: 71px 60px;
+    padding: 77px 60px 68px;
   }
 
   @media (min-width: $desktop-width) {
