--- a/source/sass/blocks/like-link.scss
+++ b/source/sass/blocks/like-link.scss
@@ -1,8 +1,5 @@
 .like-link {
   display: flex;
-  flex-direction: column;
-
-  @media (min-width: $tablet-width) {
-    flex-direction: row;
-  }
+  text-decoration: none;
+  gap: 4px;
 }
