--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -26,7 +26,7 @@
 
 .video__description {
   margin: 0 auto;
-  padding: 28px 20px;
+  padding: 28px 26px;
   font-family: $font-stack;
   font-style: normal;
   font-weight: 400;
@@ -38,10 +38,12 @@
   color: $black;
 
   @media (min-width: $tablet-width) {
-    padding: 30px 143px;
+    padding: 30px 0;
+    max-width: 445px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 32px 368px;
+    padding: 32px 0;
+    max-width: 460px;
   }
 }
